# mdweaver

./: README.md  pyproject.toml  tbump.toml
.claude/: settings.local.json
.github/workflows/: release.yml
src/md2pdf/: __init__.py  generate_pdf.py
src/mdweaver/: generate_pdf.py
tests/: conftest.py  test_mdweaver.py
