[project]
name = "mdweaver"
version = "0.2.0"
description = "Weave markdown files into beautifully formatted PDFs and EPUBs"
readme = "README.md"
authors = [
    { name = "Bob Belderbos", email = "bobbelderbos@gmail.com" }
]
requires-python = ">=3.12"
keywords = ["markdown", "pdf", "epub", "converter", "documentation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "ebooklib>=0.20",
    "markdown>=3.5",
    "pygments>=2.17",
    "weasyprint>=60.0",
]

[project.scripts]
mdweaver = "mdweaver.generate_pdf:main"

[project.urls]
Homepage = "https://github.com/bbelderbos/mdweaver"
Repository = "https://github.com/bbelderbos/mdweaver"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.9.0",
    "tbump>=6.11.0",
    "ty>=0.0.12",
]
